# politi-track

./: .gitignore  README.md  package-lock.json  project_plan.txt  pyproject.toml  requirements.txt  setup_help.txt
client/: .dockerignore  Dockerfile  docker-compose.yml  index.html  main.jsx  package-lock.json  package.json  tsconfig.json  vite.config.js
client/src/: App.jsx  App.test.jsx  App.tsx  TestApi.tsx  main.tsx  vite-env.d.ts
client/src/components/: FilterControls.tsx  Pagination.tsx  SearchBar.jsx  SearchBar.tsx  Timeline.jsx  Timeline.tsx
client/src/components/PoliticianDetailView/: CareerHistory.tsx  FinancialsAndEthics.tsx  Icons.tsx  InfoCard.tsx  LegislativeActivity.tsx  ProfileHeader.tsx  index.tsx
client/src/components/PoliticianListView/: index.tsx
client/src/lib/: api.js  api.test.ts  api.ts  types.ts
client/src/mocks/: mockAttachments.ts  mockIssues.ts  mockPoliticianSummaries.ts  mockPoliticians.ts  mockTimelineEvents.ts
client/src/types/: types.ts
server/: .dockerignore  Dockerfile  database.py  main.py  models.py  pyproject.toml  test_gift_model.py  test_politician_model.py  test_vote_record.py  verify_schema.py
server/api/: routes.py
server/data/: check_db_files.py  check_foreign_keys.py  check_min_votes.py  check_party_alignment.py  check_tables.py  diagnose_votes.py  seed_fake.py  verify_db.py  verify_schema.py
server/tests/: test_models.py  test_routes.py  test_seed.py
